[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "deep-translator>=1.11.4",
    "googletrans>=4.0.2",
    "langdetect>=1.0.9",
    "pytesseract>=0.3.13",
    "pytz>=2025.1",
    "telegram>=0.0.1",
]
